
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="unmsm.com.logingooglelap.JuevesFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border"
               >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hora_8"

                   />

                <Button
                    android:id="@+id/buttonJ_8"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="2"
                    android:padding="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hora_9"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/buttonJ_9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="2"
                    android:padding="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hora_10"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/buttonJ_10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="2"
                    android:padding="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hora_11"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/buttonJ_11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="2"
                    android:padding="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hora_12"
                    android:textSize="15sp"
                    android:background="@drawable/border"/>

                <Button
                    android:id="@+id/buttonJ_12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="2"
                    android:padding="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hora_13"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/buttonJ_13"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="2"
                    android:padding="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hora_14"
                    android:textSize="15sp"

                    />

                <Button
                    android:id="@+id/buttonJ_14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="2"
                    android:padding="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hora_15"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/buttonJ_15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="2"
                    android:padding="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hora_16"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/buttonJ_16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="2"
                    android:padding="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hora_17"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/buttonJ_17"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="2"
                    android:padding="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hora_18"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/buttonJ_18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="2"
                    android:padding="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hora_19"
                    android:textSize="15sp"

                    />

                <Button
                    android:id="@+id/buttonJ_19"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="2"
                    android:padding="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hora_20"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/buttonJ_20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="2"
                    android:padding="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hora_21"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/buttonJ_21"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="2"
                    android:padding="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""
                    android:textSize="15sp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""
                    android:textSize="15sp" />


            </LinearLayout>




        </LinearLayout>

    </ScrollView>
</LinearLayout>
